# splunk-configurations-base-indexes

./: .app-vetting.yaml  .fossa.yml  README-test.md  README.md  pyproject.toml  test_credentials.env
.github/: dependabot.yml
.github/workflows/: build-test-release.yml
.reuse/: dep5
package/: app.manifest
package/default/: app.conf  indexes.conf
tests/knowledge/: conftest.py
