[tool.poetry]
name = "splunk-configurations-base-indexes"
version = "0.1.0"
description = ""
authors = ["Splunk Inc, <sales@splunk.com>"]
license = "Splunk-1-2020"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
splunk-packaging-toolkit = "^1.0.1"
pytest-splunk-addon = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
